Fixes for several OpenSearch tests + improvements

--- a/notebooks/opensearch/tmdb/Dataframes.ipynb
+++ b/notebooks/opensearch/tmdb/Dataframes.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -36,7 +37,7 @@
     }
    ],
    "source": [
-    "classic_training_set = [j for j in judge.judgments_from_file(open('data/classic-training.txt'))]"
+    "classic_training_set = [j for j in judge.judgments_from_file(open('../../elasticsearch/tmdb/data/classic-training.txt'))]"
    ]
   },
   {
@@ -50,6 +51,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
