--- a/notebooks/opensearch/tmdb/raw-opensearch-commands.ipynb
+++ b/notebooks/opensearch/tmdb/raw-opensearch-commands.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "http://localhost:9201/_ltr; <OpenSearch([{'host': 'localhost', 'port': 9201}])>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import requests\n",
     "import json\n",
@@ -26,18 +18,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "data/tmdb.json already exists\n",
-      "Index tmdb already exists. Use `force = True` to delete and recreate\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Rebuild the index if necessary\n",
     "from ltr import download\n",
@@ -52,6 +35,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -61,27 +45,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "http://localhost:9201/_ltr/\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Response [200]>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "url = f'http://{host}:{port}/_ltr/'\n",
     "print(url)\n",
@@ -89,6 +55,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -97,33 +64,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "http://localhost:9201/_ltr/\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Response [200]>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(url)\n",
     "requests.put(url)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -134,27 +84,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "http://localhost:9201/_ltr/_featureset/my_feature_set\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Response [201]>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "feature_set = {\n",
     "   \"featureset\": {\n",
@@ -197,6 +129,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -204,6 +137,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -225,28 +159,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "http://localhost:9201/tmdb/_search\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'hits'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[26], line 38\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[38;5;28mprint\u001b[39m(search_with_log_url)\n\u001b[1;32m     37\u001b[0m resp \u001b[38;5;241m=\u001b[39m requests\u001b[38;5;241m.\u001b[39mget(search_with_log_url, json\u001b[38;5;241m=\u001b[39msearch_with_log)\u001b[38;5;241m.\u001b[39mjson()\n\u001b[0;32m---> 38\u001b[0m \u001b[38;5;28mprint\u001b[39m(json\u001b[38;5;241m.\u001b[39mdumps(\u001b[43mresp\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mhits\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhits\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;241m0\u001b[39m], indent\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m))\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'hits'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "search_with_log = {\n",
     "  \"query\": {\n",
@@ -275,8 +190,7 @@
     "    \"ltr_log\": {\n",
     "      \"log_specs\": {\n",
     "        \"name\": \"ltr_features\",\n",
-    "        \"named_query\": \"logged_features\",\n",
-    "        \"rescore_index\": 0\n",
+    "        \"named_query\": \"logged_features\"\n",
     "      }\n",
     "    }\n",
     "  }\n",
@@ -289,6 +203,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -297,6 +212,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -311,6 +227,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -326,6 +243,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -335,34 +253,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "http://localhost:9201/_ltr/_featureset/my_feature_set/_createmodel\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'_index': '.ltrstore',\n",
-       " '_id': 'model-my_model',\n",
-       " '_version': 1,\n",
-       " 'result': 'created',\n",
-       " 'forced_refresh': True,\n",
-       " '_shards': {'total': 1, 'successful': 1, 'failed': 0},\n",
-       " '_seq_no': 1,\n",
-       " '_primary_term': 1}"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = \"\"\"## LambdaMART\n",
     "## No. of trees = 10\n",
@@ -460,6 +353,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -469,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,27 +384,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "http://localhost:9201/tmdb/_search\n",
-      "Rambo III\n",
-      "Rambo: First Blood Part II\n",
-      "First Blood\n",
-      "Rambo\n",
-      "Black Mirror: White Christmas\n",
-      "The Brave-Hearted Will Take the Bride\n",
-      "The Shawshank Redemption\n",
-      "Your Name.\n",
-      "The Godfather\n",
-      "Dangal\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(url)\n",
     "for hit in resp['hits']['hits']:\n",
